--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,5 @@
 {
-  "python.pythonPath": "/usr/bin/python3"
+  "python.pythonPath": "/root/flask-ev/bin/python3",
+  // "python.pythonPath": "/usr/bin/python3",
+  // "python.formatting.provider": "yapf"
 }
